fixed spacing on each element

--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -15,7 +15,7 @@
 	font-family: "Saira Condensed", sans-serif;
 	font-weight: 600;
 	scroll-snap-align: start;
-	height: 50vh;
+	height: 90vh;
 }
 
 .aboutme-title {
