--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -10,7 +10,7 @@
 	display: flex;
 	justify-content: space-evenly;
 	width: 100%;
-	margin-top: 2rem;
+	margin-top: 3rem;
 	flex-direction: column;
 	height: 10vh;
 }
