--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -15,7 +15,7 @@
 	font-family: "Saira Condensed", sans-serif;
 	font-weight: 600;
 	scroll-snap-align: start;
-	height: 30vh;
+	height: 50vh;
 }
 
 .home-title {
