--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -6,6 +6,8 @@
 }
 .projects-main {
 	scroll-snap-align: start;
+	height: 150vh;
+	margin-top: 3rem;
 }
 
 .projects-title {
